--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -378,6 +378,12 @@
         "released": true
     },
     {
+        "id": 894,
+        "name": "Regieleki",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 924,
         "name": "Tandemaus",
         "form": "Normal",
