--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -504,6 +504,30 @@
         "released": true
     },
     {
+        "id": 978,
+        "name": "Tatsugiri",
+        "form": "Normal",
+        "released": true
+    },
+    {
+        "id": 978,
+        "name": "Tatsugiri",
+        "form": "Curly",
+        "released": true
+    },
+    {
+        "id": 978,
+        "name": "Tatsugiri",
+        "form": "Droopy",
+        "released": true
+    },
+    {
+        "id": 978,
+        "name": "Tatsugiri",
+        "form": "Stretchy",
+        "released": true
+    },
+    {
         "id": 983,
         "name": "Kingambit",
         "form": "Normal",
