--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -534,6 +534,18 @@
         "released": true
     },
     {
+        "id": 974,
+        "name": "Cetoddle",
+        "form": "Normal",
+        "released": true
+    },
+    {
+        "id": 975,
+        "name": "Cetitan",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 978,
         "name": "Tatsugiri",
         "form": "Normal",
