--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -438,6 +438,12 @@
         "released": true
     },
     {
+        "id": 890,
+        "name": "Eternatus",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 891,
         "name": "Kubfu",
         "form": "Normal",
