--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -576,6 +576,12 @@
         "released": true
     },
     {
+        "id": 977,
+        "name": "Dondozo",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 978,
         "name": "Tatsugiri",
         "form": "Normal",
