M-Sharpedo not out yet

--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -24,6 +24,12 @@
         "released": true
     },
     {
+        "id": 319,
+        "name": "Mega Sharpedo",
+        "form": "Mega",
+        "released": false
+    },
+    {
         "id": 479,
         "name": "Rotom",
         "form": "Fan",
