Psychic Spectacular shadows + Indeedee

--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -408,6 +408,24 @@
         "released": true
     },
     {
+        "id": 876,
+        "name": "Indeedee",
+        "form": "Normal",
+        "released": true
+    },
+    {
+        "id": 876,
+        "name": "Indeedee",
+        "form": "Female",
+        "released": true
+    },
+    {
+        "id": 876,
+        "name": "Indeedee",
+        "form": "Male",
+        "released": true
+    },
+    {
         "id": 877,
         "name": "Morpeko",
         "form": "Normal",
