--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -52,6 +52,11 @@
         "name": "Kyurem",
         "form": "White",
         "released": true
+    },{
+        "id": 647,
+        "name": "Keldeo",
+        "form": "Resolute",
+        "released": true
     },
     {
         "id": 679,
