Rolycoly + Mind Blown officially released

--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -263,6 +263,24 @@
         "released": true
     },
     {
+        "id": 837,
+        "name": "Rolycoly",
+        "form": "Normal",
+        "released": true
+    },
+    {
+        "id": 838,
+        "name": "Carkol",
+        "form": "Normal",
+        "released": true
+    },
+    {
+        "id": 839,
+        "name": "Coalossal",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 840,
         "name": "Applin",
         "form": "Normal",
