--- a/pogo_pkm_manual_released.json
+++ b/pogo_pkm_manual_released.json
@@ -605,6 +605,12 @@
         "released": true
     },
     {
+        "id": 950,
+        "name": "Klawf",
+        "form": "Normal",
+        "released": true
+    },
+    {
         "id": 957,
         "name": "Tinkatink",
         "form": "Normal",
